--- a/docs/configuration.adoc
+++ b/docs/configuration.adoc
@@ -129,7 +129,7 @@ The networking parameters concern the VCN and the subnets network configuration 
 
 You can leave most of the default options. However, you may want to change the following 2 parameters:
 
-* vcn_dns_name: this is the internal dns domain for resources created
+* vcn_dns_label: this is the internal dns domain for resources created
 * vcn_name: this is the name of the vcn that will be appended to the label prefix
 
 ****
