--- a/docs/prerequisites.adoc
+++ b/docs/prerequisites.adoc
@@ -6,8 +6,8 @@
 :sectnums:
 :uri-repo: https://github.com/oracle-terraform-modules/terraform-oci-oke
 
-:uri-rel-file-base: link:{uri-repo}/blob/v12
-:uri-rel-tree-base: link:{uri-repo}/tree/v12
+:uri-rel-file-base: link:{uri-repo}/blob/master
+:uri-rel-tree-base: link:{uri-repo}/tree/master
 
 :uri-docs: {uri-rel-file-base}/docs
 
