--- a/docs/quickstart.adoc
+++ b/docs/quickstart.adoc
@@ -64,7 +64,7 @@ cp terraform.tfvars.example terraform.tfvars
 * ssh_public_key_path
 * vcn_dns_label
 * vcn_name
-* create_bastion
+* bastion_enabled
 * cluster_name
 * worker_mode
 
